# binaryConverter

./: README.md  binaryConverter.sh  numbase.py  pyproject.toml
bash/: README.md  binaryConverter.sh
python/: README.md  binaryConverter.py
